--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>
-      Sathvik's Resume
-    </title>
+<!DOCTYPE html> <!-- Document definition of HTML type-->
+<html lang="en"> <!-- html opening tag with lang = "english"-->
+  <head> <!-- header information in the webpage-->
+    <meta charset="UTF-8"> <!-- determines how text is transmitted and stored-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name = "viewport" content="width=device-width", initial-scale = 1.0">
+    <title>Sathvik's portfolio</title> <!-- title bar -->
+    <link rel = "stylesheet" href = "style.css"> 
+    <!-- link links to the pages that has to be rendered on our page, rel is relationship between current document and the linked document-->
   </head>
-  <body>
-    This page will have my resume
+
+  <body> <!-- Body tag opening for the body of the webpage-->
+
+    
+
+
   </body>
 </html>
