--- a/index.html
+++ b/index.html
@@ -6,11 +6,56 @@
     <meta name = "viewport" content="width=device-width", initial-scale = 1.0">
     <title>Sathvik's portfolio</title> <!-- title bar -->
     <link rel = "stylesheet" href = "style.css"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
     <!-- link links to the pages that has to be rendered on our page, rel is relationship between current document and the linked document-->
   </head>
+<!-- header -->
+  <div id = "header">
+      
+     <div class="container">
+      <nav>
+        <img src = "images/logo.png" class = "logo">
+        <ul>
+          <li><a href = "#" >Home</a></li>
+          <li><a href = "#" >About</a></li>
+          <li><a href = "#" >Education</a></li>
+          <li><a href = "#" >Projects</a></li>
+          <li><a href = "#" >Achievements</a></li>
+        </ul>
+      </nav>
+      <div class="header-text">
+        <p>
+          Enthusiast in Coding and Debugging 
+        </p>
+        <h1> Hi, I'm <span> Sai Sathvik </span></br> KL University </h1>
 
-  <body> <!-- Body tag opening for the body of the webpage-->
+      </div>
+    </div>
+  </div>
+<!-- About section -->
+  <div id="about">
 
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+          <img src="images/user.png">
+        </div>
+        <div class="about-col-2">
+          <h1 class = "subtitle"> About Me</h1>
+          <p>
+            I am a Pursuing Final Year in the Computer Science Engineering field, 
+            at KL Deemed University, Hyderabad. I am always ready to have new experiences, 
+            meet new people, and learn new things. My ideal goal is to get placed in an organization where 
+            I can enhance my knowledge and contribute to encouraging the company's growth. I 
+            find creating value for people and impacting the world through my work gratifying. I want to 
+            pursue a career in data science or in software development.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
     
 
 
