--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
     <!-- link links to the pages that has to be rendered on our page, rel is relationship between current document and the linked document-->
+    <script src="https://kit.fontawesome.com/380212b249.js" crossorigin="anonymous"></script>
   </head>
 <!-- header -->
   <div id = "header">
@@ -87,6 +88,93 @@
         </div>
       </div>
     </div>
+  </div>
+
+
+  <!-- Projects Section -->
+
+  <div id="services">
+    <div class="container">
+      <h1 class = "subtitle"> My Projects </h1>
+
+      <div class="services-list">
+        <div>
+          <i class="fa-brands fa-php"></i>                             
+           <h2>E-Commerce Website Using PHP and Laravel Framework with MySQL database</h2><p>
+            The objective of this project is to develop a general-purpose e-commerce store for admin side
+dashboard where the admin can check, modify and update the details of any product that can be bought from the the comfort
+of home through the Internet</p>
+<a href="#">Learn More</a>
+        </div>
+        <div>
+          <i class="fa-solid fa-magnifying-glass-chart"></i>
+          <h2>Sentimental Analysis of User Comments On YouTube Video</h2><p> Our Model analyses
+            the comments whether they are positive, negative, or neutral, and gives an overall feedback on the YouTube video. with 94%
+            We are using two models to analyze the sentiment. i.e. VADER & TEXT BLOB</p>
+<a href="#">Learn More</a>
+        </div>
+        <div>
+          <i class="fa-solid fa-magnifying-glass-chart"></i>
+          <h2>Twitter Sentiment Analysis for US Elections</h2><p>
+            Based on all the tweets we could derive a
+final graph whether Trump or Biden is going to win US presidential elections hypothetically according to people’s views and
+thoughts</p>
+<a href="#">Learn More</a>
+        </div>
+        <div>
+          <i class="fa-solid fa-code"></i>
+          <h2>ChatBot</h2><p>
+            Using AI algorithms and python.</p>
+<a href="#">Learn More</a>
+        </div>
+        <div>
+          <i class="fa-solid fa-code"></i>
+          <h2>PortFolio</h2><p>
+           I designed my portfolio with HTML, CSS AND Javascript</p>
+<a href="#">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- PORTFOLIO SECTION -->
+
+
+  <div id="portfolio">
+    <div class="container">
+      <h1 class = "subtitle"> My Achievements </h1>
+      <div class="work-list">
+        <div class="work">
+          <img src="images/work1.jpeg">
+          <div class="layer">
+            <h3>Scholarship</h3>
+            <p>Received Scholarship for partial fees from silent service organization based on the merit marks I’ve earned in my
+              intermediate</p>
+              <a href="#"> <i class="fa-solid fa-link"></i></a>
+          </div>
+        </div>
+        <div class="work">
+          <img src="images/work2.png">
+          <div class="layer">
+            <h3>Global Rank</h3>
+            <p>Secured Global Rank 270 in May Long 2022 Conducted by CodeChef</p>
+              <a href="#"> <i class="fa-solid fa-link"></i></a>
+          </div>
+        </div>
+        <div class="work">
+          <img src="images/work3.png">
+          <div class="layer">
+            <h3>Incubator Selection</h3>
+            <p> Our Startup Idea got selected for second round in SRIX Incubator Nidhi Prayas event at Warangal</p>
+              <a href="#"> <i class="fa-solid fa-link"></i></a>
+          </div>
+        </div>
+
+      </div>
+      <a href="#" class = "btn">See More</a>
+       
+    </div>
+
   </div>
     
 
