--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href = "#" >About</a></li>
           <li><a href = "#" >Projects</a></li>
           <li><a href = "#" >Achievements</a></li>
+          <li><a href = "#" >Contact</a></li>
         </ul>
       </nav>
       <div class="header-text">
@@ -172,8 +173,42 @@ thoughts</p>
 
       </div>
       <a href="#" class = "btn">See More</a>
-       
     </div>
+  </div>
+
+
+  <!-- CONTACT SECTION -->
+  <div id="contact">
+
+<div class="container">
+
+  <div class="row">
+    <div class="contact-left">
+      <h1 class = "subtitle">Contact Me</h1>
+      <p><i class="fa-solid fa-paper-plane"></i>sathviksai002@gmail.com</p>
+      <p><i class="fa-solid fa-phone"></i>6302932082</p>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/tvenkatasaisathvik/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/sathviksai002"><i class="fa-brands fa-github"></i></a>
+        <a href="https://discord.com/invite/polopi#2759"><i class="fa-brands fa-discord"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+      </div>
+      <a href="images/T_Venkata_Sai_Sathvik_Resume.pdf" download class = "btn btn2">Download CV/RESUME</a>
+    </div>
+    <div class="contact-right">
+      <form>
+        <input type="text" name = "Name" placeholder="Your Name" required>
+        <input type="email" name = "email" placeholder = "Your Email" required>
+        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+        <button type = "submit" class = "btn btn2">Submit</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="copyright">
+  <p>Copyright © Sathvik. Designed <i class="fa-solid fa-heart"></i> using HTML AND CSS</p>
+</div>
 
   </div>
     
