--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>
           Enthusiast in Coding and Debugging 
         </p>
-        <h1> Hi, I'm <span> Sai Sathvik </span></br> KL University </h1>
+        <h1> Hi, I'm <span> Sai Sathvik </span></br>From KL University </h1>
 
       </div>
     </div>
