--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
           <div class="tab-contents" id = "experience">
             <ul>
-              <li><span>May 2022-July 2022</span><br>Gemini Consulting and Services Pvt Ltd(Full-time).</li>
+              <li><span>Student PHP WEBSITE DEVELOPER-May 2022-July 2022</span><br>Gemini Consulting and Services Pvt Ltd(Full-time).</li>
               <li> Frontend Development: HTML, CSS, Javascript, and JQuery</li>
               <li>Backend Connection: MySQL using Xampp Admin</li>
               <li> Admin Dashboard: Implemented an admin dashboard using AdminLTE for the admin login for CRUD</li>
@@ -83,9 +83,9 @@
           <div class="tab-contents" id = "education">
             <ul>
               <li>
-                <span>2020-2024 - Present </span><br>KL University Hyderabad - 9.55* CGPA</li>
-                <li><span>2018-2020</span><br>Narayana Junior College- 964/1000 </li>
-                <li><span>2018</span><br>Narayana E-techno School - 9.2 CGPA </li>
+                <span>Bachelors of technology- Computer Science and data Science-2020-2024</span><br>KL University Hyderabad - 9.55* CGPA</li>
+                <li><span>Telangana state board of intermediate education - 2018-2020</span><br>Narayana Junior College- 964/1000 </li>
+                <li><span>Secondary School Certification/SSC - 2018</span><br>Narayana E-techno School - 9.2 CGPA </li>
             </ul>
           </div>
         </div>
